[project]
name = "softcopy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

    "psutil>=6.0.0",

    "pyyaml>=6.0.2",

    "click>=8.1.7",

    "numpy>=2.1.0",

    "tensorstore>=0.1.64",

    "watchdog>=5.0.0",

    "zarr>=2.18.2",

    "tzdata>=2024.1",
]

[project.scripts]
softcopy = "softcopy.main:main"
slow_write = "softcopy.slow_write:main"
to_ome = "softcopy.add_ome_metadata:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
