[project]
name = "softcopy"
version = "0.0.10"
description = "Copies zarr archives from an acquisition frontend to a different disk, using filesystem watching and lockfiles to allow copying during acquisition."
authors = [{ name = "Seth Hinz", email = "sethhinz@me.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.11"
dependencies = [
    "numpy==2.1.1",
    "watchdog>=5.0.3",
    "psutil>=6.0.0",
    "click>=8.1.7",
    "pyyaml>=6.0.2",
    "tensorstore>=0.1.66",
    "iohub>=0.2.0",
]

[project.urls]
Homepage = "https://royerlab.github.io/softcopy/"
Repository = "https://github.com/royerlab/softcopy"
Documentation = "https://royerlab.github.io/softcopy/"

[project.scripts]
softcopy = "softcopy.main:main"
# slow_write = "softcopy.slow_write:main"
# to_ome = "softcopy.add_ome_metadata:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.20.0",
    # "mypy>=0.991",
    "ruff>=0.0.235",
    "pytest-cov>=5.0.0"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

# [tool.mypy]
# files = ["softcopy"]
# disallow_untyped_defs = "True"
# disallow_any_unimported = "True"
# no_implicit_optional = "True"
# check_untyped_defs = "True"
# warn_return_any = "True"
# warn_unused_ignores = "True"
# show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Avoid specifying long messages outside the exception class
    "TRY003"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
